--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "simple chat app that uses MongoDB",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
     "npm start": "node server"
   },
   "author": "",
